--- a/truba/truba/truba.vcxproj
+++ b/truba/truba/truba.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{1fa618ed-cf6b-4af2-ab0d-28e28f6429fa}</ProjectGuid>
-    <RootNamespace>mainCpp</RootNamespace>
+    <ProjectGuid>{1691a3e8-3388-4164-aa56-7ab771fba423}</ProjectGuid>
+    <RootNamespace>truba</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -128,7 +128,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="truba.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
